Fix tests with new field HeaderSchema

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1124,6 +1124,9 @@ nodeMappings:
         propertyTerm: apiContract.headerExamples
         range: Example
         allowMultiple: true
+      headerSchema:
+        propertyTerm: apiContract.headerSchema
+        range: NodeShape
       designLink:
         propertyTerm: doc.design-link-target
         range: link
