--- a/transform/src/test/resources/transformations/message-bindings/webapi.yaml
+++ b/transform/src/test/resources/transformations/message-bindings/webapi.yaml
@@ -20,7 +20,7 @@ encodes:
               $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/async-api/end-points/some-channel/publish/request
               binding:
                 $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/async-api/end-points/some-channel/publish/request/message-bindings
-                binding:
+                bindings:
                   -
                     bindingType: Kafka
                     $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/async-api/end-points/some-channel/publish/request/message-bindings/kafka-message
