--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -106,6 +106,8 @@ nodeMappings:
       Server: Server
       ResourceType: ResourceType
       CustomDomainProperty: CustomDomainProperty
+      Operation: Operation
+      Message: Message
 
     union:
       - UnionShape
@@ -133,6 +135,8 @@ nodeMappings:
       - Server
       - ResourceType
       - CustomDomainProperty
+      - Operation
+      - Message
 
 
   AbstractDeclarationUnion:
