APIMF-3131: adjust vocabularies due to model doc iri clashes

--- a/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
+++ b/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
@@ -189,7 +189,7 @@ propertyTerms:
   variable:
     displayName: variable
     description: Variables to be replaced in the graph template introduced by an AbstractDeclaration
-    range: VariableValue
+    range: string
   version:
     displayName: version
     description: Version of the current model
