--- a/vocabulary/src/main/resources/vocabularies/external/shacl.yaml
+++ b/vocabulary/src/main/resources/vocabularies/external/shacl.yaml
@@ -93,7 +93,7 @@ propertyTerms:
     range: string
   node:
     displayName: range
-    description: Object constraint over the type of the mapped property
+    description: Object constraint over the type of the mapped graph property
     range: uri
   not:
     displayName: not
