--- a/transform/dependencies.properties
+++ b/transform/dependencies.properties
@@ -1,3 +1,3 @@
 # Leave here for the publication process to detect if amf-transform has to be published!
 # Because we publish a version of amf-transform for each version of amf-client publish.
-amf.apicontract=5.0.0-beta
+amf.apicontract=5.0.0-beta.3
