--- a/versions.yaml
+++ b/versions.yaml
@@ -1,2 +1,2 @@
-amf.vocabulary: 11.1.0-SNAPSHOT
-amf.transform: 1.12.0-SNAPSHOT
+amf.vocabulary: 13-beta-SNAPSHOT
+amf.transform: 2.0.0-beta-SNAPSHOT
