--- a/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
+++ b/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
@@ -1,4 +1,5 @@
 #%Vocabulary 1.0
+vocabulary: doc
 base: http://a.ml/vocabularies/document#
 usage: Document Model vocabulary for AMF. The Document Model defines the basic modular units where domain descriptions can be encoded.
 uses:
