--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -552,6 +552,9 @@ nodeMappings:
       root:
         propertyTerm: doc.root
         range: boolean
+      package:
+        propertyTerm: doc.package
+        range: string
 
 
   Callback:
@@ -658,6 +661,9 @@ nodeMappings:
       name:
         propertyTerm: core.name
         range: string
+      serializationOrder:
+        propertyTerm: raml-shapes.serializationOrder
+        range: integer
       designLink:
         propertyTerm: doc.design-link-target
         range: link
@@ -1294,6 +1300,9 @@ nodeMappings:
       closed:
         propertyTerm: shacl.closed
         range: boolean
+      additionalPropertiesKeySchema:
+        propertyTerm: shacl.additionalPropertiesKeySchema
+        range: DataShapesUnion
       additionalPropertiesSchema:
         propertyTerm: shacl.additionalPropertiesSchema
         range: DataShapesUnion
@@ -1740,6 +1749,9 @@ nodeMappings:
       patternName:
         propertyTerm: raml-shapes.patternName
         range: string
+      serializationOrder:
+        propertyTerm: raml-shapes.serializationOrder
+        range: integer
 
 
   RecursiveShape:
@@ -2093,6 +2105,9 @@ nodeMappings:
       writeOnly:
         propertyTerm: raml-shapes.writeOnly
         range: boolean
+      serializationSchema:
+        propertyTerm: raml-shapes.serializationSchema
+        range: DataShapesUnion
       deprecated:
         propertyTerm: raml-shapes.deprecated
         range: boolean
