--- a/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
+++ b/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
@@ -143,6 +143,10 @@ propertyTerms:
     displayName: location
     description: Location of an inlined fragment
     range: string
+  package:
+    displayName: package
+    description: Logical identifier providing a common namespace for the information in this base unit
+    range: string
   raw:
     displayName: raw
     description: Raw textual information that cannot be processed for the current model semantics.
