--- a/versions.yaml
+++ b/versions.yaml
@@ -1,2 +1,2 @@
-amf.vocabulary: 13-beta.4
-amf.transform: 2.0.0-beta.4
+amf.vocabulary: 13-SUPER-SECRET-FREEZE-1-SNAPSHOT
+amf.transform: 2.0.0-SUPER-SECRET-FREEZE-1-SNAPSHOT
