--- a/versions.yaml
+++ b/versions.yaml
@@ -1,2 +1,2 @@
-amf.vocabulary: 13-SUPER-SECRET-FREEZE-1-SNAPSHOT
-amf.transform: 2.0.0-SUPER-SECRET-FREEZE-1-SNAPSHOT
+amf.vocabulary: 13-FINAL-ID-1-SNAPSHOT
+amf.transform: 2.0.0-FINAL-ID-1-SNAPSHOT
