--- a/transform/src/test/resources/transformations/raml-extension/webapi.yaml
+++ b/transform/src/test/resources/transformations/raml-extension/webapi.yaml
@@ -1,24 +1,21 @@
 #%WebAPI Spec 1.0
 unitType: Extension
 $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/rootAsset
-version: 3.1.0
 root: true
 references:
   -
     unitType: Extension
-    $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml
-    version: 3.1.0
+    $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0
     root: false
     references:
       -
         unitType: Document
-        $id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml
-        version: 3.1.0
+        $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/references/0
         root: false
-        location: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml
+        location: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/references/0
         encodes:
           elementType: WebAPI
-          $id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml#/web-api
+          $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/references/0/web-api
           name: Unsecure Template (Override me)
           scheme:
             - HTTPS
@@ -27,20 +24,20 @@ references:
           version: v1
           contentType:
             - application/json
-    location: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml
+    location: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0
     encodes:
       elementType: WebAPI
-      $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api
+      $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/web-api
       name: Secure Extension Template (Override me)
       endpoint:
         -
-          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core%2Fsecure%2Fping
+          $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/web-api/endpoint/%2F_core%2Fsecure%2Fping
           path: /_core/secure/ping
         -
-          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core%2Fsecure
+          $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/web-api/endpoint/%2F_core%2Fsecure
           path: /_core/secure
         -
-          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core
+          $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/references/0/web-api/endpoint/%2F_core
           path: /_core
 location: file://transform/src/test/resources/transformations/raml-extension/api.raml
 encodes:
