--- a/transform/src/test/resources/transformations/security/webapi.yaml
+++ b/transform/src/test/resources/transformations/security/webapi.yaml
@@ -4,13 +4,13 @@ $id: file://transform/src/test/resources/transformations/security/api.raml#/root
 declares:
   -
     elementType: SecurityScheme
-    $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0
+    $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0
     name: oauth_2_0
     description: |
       Dropbox supports OAuth 2.0 for authenticating all API requests.
     response:
       -
-        $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/401
+        $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/response/resp/401
         name: "401"
         description: |
           Bad or expired token. This can happen if the user or Dropbox
@@ -20,14 +20,14 @@ declares:
     type: OAuth 2.0
     settings:
       settingsType: OAuth2
-      $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2
+      $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2
       flows:
         -
-          $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2/default-flow
+          $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2/flows/default-flow
           authorizationURI: https://www.dropbox.com/1/oauth2/authorize
           scope:
             -
-              $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2/default-flow/ADMINISTRATOR
+              $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2/flows/default-flow/scope/ADMINISTRATOR
               name: ADMINISTRATOR
           accessTokenURI: https://api.dropbox.com/1/oauth2/token
       authorizationGrant:
@@ -36,7 +36,7 @@ declares:
         - authorization_code
     header:
       -
-        $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/parameter/header/Authorization
+        $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/header/parameter/header/Authorization
         required: true
         paramName: Authorization
         name: Authorization
@@ -45,12 +45,11 @@ declares:
         binding: header
         schema:
           shapeType: Scalar
-          $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/parameter/header/Authorization/scalar/schema
+          $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/header/parameter/header/Authorization/scalar/schema
           name: schema
           description: |
             Used to send a valid OAuth 2 access token.
           datatype: http://www.w3.org/2001/XMLSchema#string
-version: 3.1.0
 root: true
 location: file://transform/src/test/resources/transformations/security/api.raml
 encodes:
@@ -59,42 +58,42 @@ encodes:
   name: GitHub API
   server:
     -
-      $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/https%3A%2F%2Fapi.github.com
+      $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/server/https%3A%2F%2Fapi.github.com
       urlTemplate: https://api.github.com
   version: v3
   endpoint:
     -
-      $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists
+      $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists
       parameter:
         -
-          $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/parameter/path/userid
+          $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/parameter/parameter/path/userid
           required: true
           paramName: userid
           name: userid
           binding: path
           schema:
             shapeType: Scalar
-            $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/parameter/path/userid/scalar/userid
+            $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/parameter/parameter/path/userid/scalar/userid
             name: userid
             datatype: http://www.w3.org/2001/XMLSchema#string
       supportedOperation:
         -
-          $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/get
+          $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/supportedOperation/get
           security:
             -
-              $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/get/default-requirement_2
+              $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/supportedOperation/get/security/default-requirement_2
               schemes:
                 -
-                  $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/get/default-requirement_2/oauth_2_0
+                  $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/supportedOperation/get/security/default-requirement_2/schemes/oauth_2_0
                   name: oauth_2_0
                   scheme:
-                    $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0
+                    $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0
                     name: oauth_2_0
                     description: |
                       Dropbox supports OAuth 2.0 for authenticating all API requests.
                     response:
                       -
-                        $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/401
+                        $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/response/resp/401
                         name: "401"
                         description: |
                           Bad or expired token. This can happen if the user or Dropbox
@@ -104,14 +103,14 @@ encodes:
                     type: OAuth 2.0
                     settings:
                       settingsType: OAuth2
-                      $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2
+                      $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2
                       flows:
                         -
-                          $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2/default-flow
+                          $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2/flows/default-flow
                           authorizationURI: https://www.dropbox.com/1/oauth2/authorize
                           scope:
                             -
-                              $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/settings/oauth2/default-flow/ADMINISTRATOR
+                              $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/settings/oauth2/flows/default-flow/scope/ADMINISTRATOR
                               name: ADMINISTRATOR
                           accessTokenURI: https://api.dropbox.com/1/oauth2/token
                       authorizationGrant:
@@ -120,7 +119,7 @@ encodes:
                         - authorization_code
                     header:
                       -
-                        $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/parameter/header/Authorization
+                        $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/header/parameter/header/Authorization
                         required: true
                         paramName: Authorization
                         name: Authorization
@@ -129,16 +128,16 @@ encodes:
                         binding: header
                         schema:
                           shapeType: Scalar
-                          $id: file://transform/src/test/resources/transformations/security/api.raml#/declarations/securitySchemes/oauth_2_0/parameter/header/Authorization/scalar/schema
+                          $id: file://transform/src/test/resources/transformations/security/api.raml#/declares/scheme/oauth_2_0/header/parameter/header/Authorization/scalar/schema
                           name: schema
                           description: |
                             Used to send a valid OAuth 2 access token.
                           datatype: http://www.w3.org/2001/XMLSchema#string
             -
-              $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/get/default-requirement_1
+              $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/supportedOperation/get/security/default-requirement_1
               schemes:
                 -
-                  $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/end-points/%2Fusers%2F%7Buserid%7D%2Fgists/get/default-requirement_1/null
+                  $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api/endpoint/%2Fusers%2F%7Buserid%7D%2Fgists/supportedOperation/get/security/default-requirement_1/schemes/null
                   name: "null"
           method: get
       path: /users/{userid}/gists
