APIMF-3319: exclude BaseUnitSourceInformation and LocationInformation nodes from canonical transformation

--- a/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
+++ b/vocabulary/src/main/resources/vocabularies/aml_doc.yaml
@@ -141,7 +141,7 @@ propertyTerms:
     range: uri
   location:
     displayName: location
-    description: Location of an inlined fragment
+    description: Location of the metadata document that generated this base unit
     range: string
   package:
     displayName: package
